# pulsedetector

./: .gitignore  DetectPeaksExample.ipynb  Pipfile  README.md  __init__.py  batch_process.py  batch_process_ios.py  get_pulse(dropbox mess).py  get_pulse.py  get_pulse_from_file.py  get_pulse_from_ios_txt.py  get_pulse_from_video.py  play_wav.py  plot_pulses.py  pulse_align.ipynb  pulse_wave_app.py  rename_movies.py  run.py  run.sh  setup_pulse_analyzer.py
aux_util/: README.md  batch_stabilize.py  crop_videos.py  process_10_30_14.sh  process_5_13_14.sh  process_5_16_14.sh  process_6_18_14.sh  process_pulse.py  pulse_10_30_14.py  pulse_20150222_epi_trial.py  pulse_jan_2015.py  resize_movies.py  slow_down_movies.py
cpp/: CMakeLists.txt  README.md
cpp/motion/: CMakeLists.txt  videostab.cpp  videostab1.cpp
lib/: device.py  interface.py  processor_multi_channel.py  processors.py  processors_noopenmdao.py  pulse_align_ios.py  signal_process_util.py  video_process_util.py
motion/: __init__.py  flow.py  good_features_to_track.py  opt_flow.py  videostab.py
pulse_detector/: batch_process_ios.py  get_pulse(dropbox mess).py  get_pulse_from_ios_txt.py  get_pulse_from_video.py  pulse_area_app.py  setup_pulse_analyzer.spec
pulsedetector/: batch_process.py  get_pulse.py  get_pulse_from_file.py  plot_pulses.py  pulse_wave_app.py  pulse_wave_app.spec  rename_movies.py  run.py
